--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,10 +1,11 @@
 @import "~@/styles/variables.styl";
 
 .favorite-element
-    background-color red
+    background-color transparent
     height ($maxWidth/4)vw 
     width ($maxWidth/4)vw
-
+    
+    
     & > div
         background-color green
         height calc(100% - 2rem)
@@ -12,7 +13,13 @@
         margin 1rem
         display flex
         flex-flow column nowrap
+        
+       
+        &.highlighted
+            background-color #FF6EB4
 
+        
+    
         & > a
             font-size 1.2rem
             text-decoration unset
